# CRenderEx

./: CMakeLists.txt  CRInput.h  CRenderEx.h  Makefile  README.md  build.sh
exemples/: exemple1.c
exemples/0_25v/: Rects.c
exemples/0_50v/: Text.c  line.c
exemples/1_0/: Recter.c  alpha.c  colider.c  glass.c
src/: CRInput.c  CRenderEx.c
